# TMGA-1

TMGA/: README.md
TMGA/Result/: CompareResult.xlsx  ExampleResult.xlsx  Exhaustive.txt  OrthogonalResult.xlsx
TMGA/exp_Compare_ms/: HEFT.cpp  main.cpp  result.txt
TMGA/exp_Compare_ms/include/: GenerateAChrom.h
TMGA/exp_Compare_ms/lib/: CMakeLists.txt  GenerateAChrom.cpp
TMGA/exp_Compare_st/: main.cpp  result.txt
TMGA/exp_Compare_st/lib/: config.cpp
TMGA/exp_Example/: CMakeLists.txt  main.cpp  result.txt
TMGA/exp_Example/include/: classAndVarDefine.h
TMGA/exp_Example/lib/: CMakeLists.txt  GenerateAChrom.cpp
TMGA/exp_Orthogonal/: TMGA.cpp  TMGA.h  exp.txt  main.cpp
TMGA/exp_Time/: result.txt
